Primer commit JavaSwing